--- a/index.html
+++ b/index.html
@@ -1,214 +1,330 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accessibility Guidelines Navigation</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-    }
-    .container {
-      display: flex;
-    }
-    .main-heading {
-      margin: 20px;
-      font-family: Arial, sans-serif;
-    }
-    .side-nav {
-      background-color: #2c3e50;
-      color: white;
-      width: 300px;
-      padding: 20px;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    }
-    .side-nav h2 {
-      color: #ecf0f1;
-    }
-    .side-nav ul {
-      list-style: none;
-      padding: 0;
-    }
-    .side-nav ul li {
-      margin: 10px 0;
-    }
-    .side-nav ul li ul {
-      margin-top: 5px;
-      margin-left: 20px;
-      list-style-type: disc;
-      display: none;
-    }
-    .side-nav ul li ul ul {
-      margin-left: 20px;
-      list-style-type: circle;
-    }
-    .side-nav ul li a {
-      color: #ecf0f1;
-      text-decoration: none;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .side-nav ul li a:hover {
-      text-decoration: underline;
-    }
-    .main-section {
-      flex: 1;
-      padding: 20px;
-      display: none;
-    }
-    .main-section.active {
-      display: block;
-    }
-  </style>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const listItems = document.querySelectorAll(".side-nav > ul > li > a");
-      const subGuidelines = document.querySelectorAll(".side-nav ul li ul > li > a");
-      const criteriaLinks = document.querySelectorAll(".side-nav ul li ul ul li a");
-      const mainSection = document.getElementById("main-content");
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accessibility Guidelines Navigation</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+    }
+    .container {
+      display: flex;
+    }
+    .main-heading {
+      margin: 20px;
+      font-family: Arial, sans-serif;
+    }
+    .banner {
+      background-color: #003399;
+      color: white;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .banner h1 {
+      margin: 0;
+    }
+    .banner a {
+      color: white;
+      text-decoration: underline;
+      font-weight: bold;
+      position: relative;
+    }
+    .banner a::after {
+      content: '\2197';
+      margin-left: 5px;
+      font-size: 0.8em;
+    }
+    .feedback-button {
+      background-color: #1E8549;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      cursor: pointer;
+      font-size: 14px;
+      border-radius: 4px;
+    }
+    .feedback-modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: none;
+      justify-content: center;
+      align-items: center;
+    }
+    .feedback-modal-content {
+      background: white;
+      padding: 20px;
+      width: 400px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .feedback-modal-content h2 {
+      margin-top: 0;
+    }
+    .feedback-modal-content textarea {
+      width: 100%;
+      height: 100px;
+      padding: 8px;
+      margin-bottom: 10px;
+    }
+    .feedback-modal-content .modal-buttons {
+      display: flex;
+      justify-content: space-between;
+    }
+    .side-nav {
+      background-color: #2c3e50;
+      color: white;
+      width: 300px;
+      padding: 20px;
+      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+      height: 100vh; /* Keep side navigation background fully expanded */
+    }
+    .side-nav h2 {
+      color: #ecf0f1;
+    }
+    .side-nav ul {
+      list-style: none;
+      padding: 0;
+    }
+    .side-nav ul li {
+      margin: 10px 0;
+    }
+    .side-nav ul li ul {
+      margin-top: 5px;
+      margin-left: 20px;
+      list-style-type: disc;
+      display: none; /* Hide nested lists by default */
+    }
+    .side-nav ul li ul ul {
+      margin-left: 20px;
+      list-style-type: circle;
+      display: none; /* Hide third-level lists by default */
+    }
+    .side-nav ul li a {
+      color: #ecf0f1;
+      text-decoration: none;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .side-nav ul li a:hover {
+      text-decoration: underline;
+    }
+    .main-section {
+      flex: 1;
+      padding: 20px;
+      display: none;
+      position: relative;
+    }
+    .main-section::before {
+      content: "Work in progress we will get back soon!";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: rgba(0, 0, 0, 0.5);
+      font-size: 2em;
+      white-space: nowrap;
+      pointer-events: none;
+    }
+    .main-section.active {
+      display: block;
+    }
+  </style>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const listItems = document.querySelectorAll(".side-nav > ul > li > a");
+      const subGuidelines = document.querySelectorAll(".side-nav ul li ul > li > a");
+      const criteriaLinks = document.querySelectorAll(".side-nav ul li ul ul li a");
+      const mainSection = document.getElementById("main-content");
+      const feedbackModal = document.getElementById("feedback-modal");
+      const feedbackButton = document.getElementById("feedback-button");
+      const closeButton = document.getElementById("close-modal");
 
-      listItems.forEach(item => {
-        item.addEventListener("click", function (event) {
-          event.preventDefault();
-          const nestedList = this.parentNode.querySelector("ul");
-          if (nestedList) {
-            nestedList.style.display = nestedList.style.display === "block" ? "none" : "block";
-          }
-        });
-      });
+      feedbackButton.addEventListener("click", () => {
+        feedbackModal.style.display = "flex";
+      });
 
-      subGuidelines.forEach(subItem => {
-        subItem.addEventListener("click", function (event) {
-          event.preventDefault();
-          const criteriaList = this.parentNode.querySelector("ul");
-          if (criteriaList) {
-            criteriaList.style.display = criteriaList.style.display === "block" ? "none" : "block";
-          }
-        });
-      });
+      closeButton.addEventListener("click", () => {
+        feedbackModal.style.display = "none";
+      });
 
-      criteriaLinks.forEach(link => {
-        link.addEventListener("click", function (event) {
-          event.preventDefault();
-          const content = this.textContent;
-          mainSection.innerHTML = `<h2>Pass/Fail scenarios for ${content}</h2><p>Work in progress we will get back soon!</p>`;
-          mainSection.classList.add("active");
-        });
-      });
-    });
-  </script>
+      listItems.forEach(item => {
+        item.addEventListener("click", function (event) {
+          event.preventDefault();
+          const nestedList = this.parentElement.querySelector("ul");
+          if (nestedList) {
+            nestedList.style.display = (nestedList.style.display === "block") ? "none" : "block";
+          }
+        });
+      });
+
+      subGuidelines.forEach(subItem => {
+        subItem.addEventListener("click", function (event) {
+          event.preventDefault();
+          const criteriaList = this.parentElement.querySelector("ul");
+          if (criteriaList) {
+            criteriaList.style.display = (criteriaList.style.display === "block") ? "none" : "block";
+          }
+        });
+      });
+
+      criteriaLinks.forEach(link => {
+        link.addEventListener("click", function (event) {
+          event.preventDefault();
+          const content = this.textContent.trim();
+
+          if (content === "1.1.1 Non-text Content (Level A)") {
+            mainSection.innerHTML = `
+              <h2>${content}</h2>
+              <div style="display: flex; gap: 20px;">
+                <div style="flex: 1;">
+                  <h3>Pass Scenarios</h3>
+                  <img src="C:/Users/kirankumartb/OneDrive - Virtusa/Training/A11YWebExampleProject/1.1.1Images/Info_image_butterfly.jpg" alt="a butterfly's lifecycle chart" style="width: 50%; height: auto;">
+                </div>
+                <div style="flex: 1;">
+                  <h3>Fail Scenarios</h3>
+                </div>
+              </div>`;
+          } else {
+            mainSection.innerHTML = `<h2>${content}</h2><h3>Pass Scenarios</h3><h3>Fail Scenarios</h3>`;
+          }
+
+          mainSection.classList.add("active");
+        });
+      });
+    });
+  </script>
 </head>
 <body>
-  <h1 class="main-heading">WCAG 2.1 Guidelines Examples</h1>
-  <div class="container">
-    <nav class="side-nav">
-      <h2>Accessibility Principles</h2>
-      <ul>
-        <li><a href="#">Perceivable</a>
-          <ul>
-            <li><a href="#">1.1 Text Alternatives</a>
-              <ul>
-                <li><a href="#">1.1.1 Non-text Content (Level A)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">1.2 Time-based Media</a>
-              <ul>
-                <li><a href="#">1.2.1 Audio-only and Video-only (Pre-recorded) (Level A)</a></li>
-                <li><a href="#">1.2.2 Captions (Pre-recorded) (Level A)</a></li>
-                <li><a href="#">1.2.3 Audio Description or Media Alternative (Pre-recorded) (Level A)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">1.3 Adaptable</a>
-              <ul>
-                <li><a href="#">1.3.1 Info and Relationships (Level A)</a></li>
-                <li><a href="#">1.3.2 Meaningful Sequence (Level A)</a></li>
-                <li><a href="#">1.3.3 Sensory Characteristics (Level A)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">1.4 Distinguishable</a>
-              <ul>
-                <li><a href="#">1.4.1 Use of Color (Level A)</a></li>
-                <li><a href="#">1.4.3 Contrast (Minimum) (Level AA)</a></li>
-                <li><a href="#">1.4.4 Resize Text (Level AA)</a></li>
-                <li><a href="#">1.4.5 Images of Text (Level AA)</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a href="#">Operable</a>
-          <ul>
-            <li><a href="#">2.1 Keyboard Accessible</a>
-              <ul>
-                <li><a href="#">2.1.1 Keyboard (Level A)</a></li>
-                <li><a href="#">2.1.2 No Keyboard Trap (Level A)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">2.2 Enough Time</a>
-              <ul>
-                <li><a href="#">2.2.1 Timing Adjustable (Level A)</a></li>
-                <li><a href="#">2.2.2 Pause, Stop, Hide (Level AA)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">2.3 Seizures and Physical Reactions</a>
-              <ul>
-                <li><a href="#">2.3.1 Three Flashes or Below Threshold (Level A)</a></li>
-                <li><a href="#">2.3.2 Three Flashes (Level AA)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">2.4 Navigable</a>
-              <ul>
-                <li><a href="#">2.4.1 Bypass Blocks (Level A)</a></li>
-                <li><a href="#">2.4.2 Page Titled (Level A)</a></li>
-                <li><a href="#">2.4.5 Multiple Ways (Level AA)</a></li>
-                <li><a href="#">2.4.6 Headings and Labels (Level AA)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">2.5 Input Modalities</a>
-              <ul>
-                <li><a href="#">2.5.1 Pointer Gestures (Level A)</a></li>
-                <li><a href="#">2.5.3 Label in Name (Level AA)</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a href="#">Understandable</a>
-          <ul>
-            <li><a href="#">3.1 Readable</a>
-              <ul>
-                <li><a href="#">3.1.1 Language of Page (Level A)</a></li>
-                <li><a href="#">3.1.2 Language of Parts (Level AA)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">3.2 Predictable</a>
-              <ul>
-                <li><a href="#">3.2.1 On Focus (Level A)</a></li>
-                <li><a href="#">3.2.3 Consistent Navigation (Level AA)</a></li>
-                <li><a href="#">3.2.4 Consistent Identification (Level AA)</a></li>
-              </ul>
-            </li>
-            <li><a href="#">3.3 Input Assistance</a>
-              <ul>
-                <li><a href="#">3.3.1 Error Identification (Level A)</a></li>
-                <li><a href="#">3.3.3 Error Suggestion (Level AA)</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a href="#">Robust</a>
-          <ul>
-            <li><a href="#">4.1 Compatible</a>
-              <ul>
-                <li><a href="#">4.1.1 Parsing (Level A)</a></li>
-                <li><a href="#">4.1.2 Name, Role, Value (Level A)</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    <main id="main-content" class="main-section"></main>
-  </div>
+  <header class="banner" role="banner">
+    <h1>WCAG 2.1 Guidelines Examples</h1>
+    <div>
+      <a href="https://www.w3.org/TR/WCAG21/" target="_blank">WCAG 2.1 Documentation</a>
+      <button id="feedback-button" class="feedback-button">Feedback</button>
+    </div>
+  </header>
+
+  <div id="feedback-modal" class="feedback-modal">
+    <div class="feedback-modal-content">
+      <h2>Feedback</h2>
+      <label for="feedback-textarea">Please write your valuable feedback here:</label>
+      <textarea id="feedback-textarea"></textarea>
+      <div class="modal-buttons">
+        <button id="close-modal">Close</button>
+        <button id="submit-feedback">Submit</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <nav class="side-nav">
+      <h2>Accessibility Principles</h2>
+      <ul>
+        <li><a href="#">Perceivable</a>
+          <ul>
+            <li><a href="#">1.1 Text Alternatives</a>
+              <ul>
+                <li><a href="#">1.1.1 Non-text Content (Level A)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">1.2 Time-based Media</a>
+              <ul>
+                <li><a href="#">1.2.1 Audio-only and Video-only (Pre-recorded) (Level A)</a></li>
+                <li><a href="#">1.2.2 Captions (Pre-recorded) (Level A)</a></li>
+                <li><a href="#">1.2.3 Audio Description or Media Alternative (Pre-recorded) (Level A)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">1.3 Adaptable</a>
+              <ul>
+                <li><a href="#">1.3.1 Info and Relationships (Level A)</a></li>
+                <li><a href="#">1.3.2 Meaningful Sequence (Level A)</a></li>
+                <li><a href="#">1.3.3 Sensory Characteristics (Level A)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">1.4 Distinguishable</a>
+              <ul>
+                <li><a href="#">1.4.1 Use of Color (Level A)</a></li>
+                <li><a href="#">1.4.3 Contrast (Minimum) (Level AA)</a></li>
+                <li><a href="#">1.4.4 Resize Text (Level AA)</a></li>
+                <li><a href="#">1.4.5 Images of Text (Level AA)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="#">Operable</a>
+          <ul>
+            <li><a href="#">2.1 Keyboard Accessible</a>
+              <ul>
+                <li><a href="#">2.1.1 Keyboard (Level A)</a></li>
+                <li><a href="#">2.1.2 No Keyboard Trap (Level A)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">2.2 Enough Time</a>
+              <ul>
+                <li><a href="#">2.2.1 Timing Adjustable (Level A)</a></li>
+                <li><a href="#">2.2.2 Pause, Stop, Hide (Level AA)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">2.3 Seizures and Physical Reactions</a>
+              <ul>
+                <li><a href="#">2.3.1 Three Flashes or Below Threshold (Level A)</a></li>
+                <li><a href="#">2.3.2 Three Flashes (Level AA)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">2.4 Navigable</a>
+              <ul>
+                <li><a href="#">2.4.1 Bypass Blocks (Level A)</a></li>
+                <li><a href="#">2.4.2 Page Titled (Level A)</a></li>
+                <li><a href="#">2.4.5 Multiple Ways (Level AA)</a></li>
+                <li><a href="#">2.4.6 Headings and Labels (Level AA)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">2.5 Input Modalities</a>
+              <ul>
+                <li><a href="#">2.5.1 Pointer Gestures (Level A)</a></li>
+                <li><a href="#">2.5.3 Label in Name (Level AA)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="#">Understandable</a>
+          <ul>
+            <li><a href="#">3.1 Readable</a>
+              <ul>
+                <li><a href="#">3.1.1 Language of Page (Level A)</a></li>
+                <li><a href="#">3.1.2 Language of Parts (Level AA)</a></li>
+              </ul>
+            </li>
+            <li><a href="#">3.2 Predictable</a>
+              <ul>
+                <li><a href="#">3.2.1 On Focus (Level A)</a></li>
+                <li><a href="#">3.2.3 Consistent Navigation (Level AA)</a></li>
+                <li><a href="#">3.2.4 Consistent Identification (Level AA)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="#">Robust</a>
+          <ul>
+            <li><a href="#">4.1 Compatible</a>
+              <ul>
+                <li><a href="#">4.1.1 Parsing (Level A)</a></li>
+                <li><a href="#">4.1.2 Name, Role, Value (Level A)</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <main id="main-content" class="main-section"></main>
+  </div>
 </body>
 </html>
