--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div style="display: flex; gap: 20px;">
                 <div style="flex: 1;">
                   <h3>Pass Scenarios</h3>
-                  <img src="C:/Users/kirankumartb/OneDrive - Virtusa/Training/A11YWebExampleProject/1.1.1Images/Info_image_butterfly.jpg" alt="a butterfly's lifecycle chart" style="width: 50%; height: auto;">
+                  <img src="butterflylifecycle.jpg" alt="a butterfly's lifecycle chart" style="width: 50%; height: auto;">
                 </div>
                 <div style="flex: 1;">
                   <h3>Fail Scenarios</h3>
