--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div style="display: flex; gap: 20px;">
                 <div style="flex: 1;">
                   <h3>Pass Scenarios</h3>
-                  <img src="butterflylifecycle.jpg" alt="a butterfly's lifecycle chart" style="width: 50%; height: auto;">
+                  <img src="butterflylifecycle.jpg" alt=" Illustration of the butterfly life cycle showing the stages: egg on a leaf, caterpillar, chrysalis (pupa), and adult butterfly, arranged in a circular sequence.  " style="width: 50%; height: auto;">
                 </div>
                 <div style="flex: 1;">
                   <h3>Fail Scenarios</h3>
