--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ margin-right: 5px;      /* Add space between icon and text */
                             <h4>Simple Informative Image</h4>
                             <img src="butterflylifecycle.jpg" alt="Illustration of the butterfly life cycle showing the stages: egg on a leaf, caterpillar, chrysalis (pupa), and adult butterfly, arranged in a circular sequence." style="width: 50%; height: auto; display: block; margin-bottom: 10px;">
                             <h4>Image with Long Description</h4>
-                            <img src="complex-diagram.jpg" alt="Complex flowchart showing interconnected processes with a long description provided below" style="width: 50%; height: auto; display: block; margin-bottom: 10px;">
+                            <img src="year-over-year-growth-chart.jpg" alt="This is the year over year growth of company XYZ, description provided in the link below of the image." style="width: 50%; height: auto; display: block; margin-bottom: 10px;">
                             <p><a href="#" id="openModal">View Detailed Description</a></p>
 
 <div id="imagedescription" class="imgdesmodal">  <div class="imgdesmodal-content"> <span class="close">&times;</span>
