--- a/index.html
+++ b/index.html
@@ -415,11 +415,40 @@ margin-right: 5px;      /* Add space between icon and text */
                             <h4>Simple Informative Image</h4>
                             <img src="butterflylifecycle.jpg" alt="Illustration of the butterfly life cycle showing the stages: egg on a leaf, caterpillar, chrysalis (pupa), and adult butterfly, arranged in a circular sequence." style="width: 50%; height: auto; display: block; margin-bottom: 10px;">
                             <h4>Image with Long Description</h4>
-                            <img src="year-over-year-growth-chart.jpg" alt="This is the year over year growth of company XYZ, description provided in the link below of the image." style="width: 50%; height: auto; display: block; margin-bottom: 10px;">
-                            <p><a href="#" id="openModal">View Detailed Description</a></p>
+                            // Create the image element
+  var img = document.createElement("img");
+  img.src = "year-over-year-growth-chart.jpg"; // Set the image source
+  img.alt = "Website Traffic Chart";
 
-<div id="imagedescription" class="imgdesmodal">  <div class="imgdesmodal-content"> <span class="close">&times;</span>
-    <p>
+  // Create the heading
+  var h2 = document.createElement("h2");
+  h2.textContent = "Website Traffic Visualization";
+
+  // Create the link
+  var link = document.createElement("a");
+  link.href = "#";
+  link.id = "openModal";
+  link.textContent = "View Detailed Description";
+
+  var p = document.createElement("p");
+  p.appendChild(link);
+
+
+  // Create the modal div (but don't populate it yet)
+  var modal = document.createElement("div");
+  modal.id = "imagedescription";
+  modal.className = "imgdesmodal";
+
+  var modalContent = document.createElement("div");
+  modalContent.className = "imgdesmodal-content";
+
+    var closeSpan = document.createElement("span");
+    closeSpan.className = "close";
+    closeSpan.id = "closeButton";
+    closeSpan.innerHTML = "&times;";
+
+    var modalText = document.createElement("p");
+    modalText.innerHTML = `
       **Overall Image:**
 
       The image presents a visualization of website traffic data using a combination of a stacked column chart and a line graph. It aims to show the year-over-year growth of new and returning visitors to a website from 2011 to 2022. The chart is titled "How to Visualize Data Using Year-Over-Year Growth Chart?" and includes a legend at the bottom clarifying the two data series.
@@ -447,9 +476,49 @@ margin-right: 5px;      /* Add space between icon and text */
       * **Context:** The chart lacks context about the website or industry it represents. This information would help in better interpreting the data.
 
       **Overall, the image is a good representation of visualizing year-over-year growth using a combination chart. It effectively conveys the trends and composition of website traffic, although some additional labeling and context could enhance its clarity.**
-    </p>
-  </div>
-</div>
+    `;
+
+    modalContent.appendChild(closeSpan);
+    modalContent.appendChild(modalText);
+    modal.appendChild(modalContent);
+
+
+
+  // Append the elements to the body
+  document.body.appendChild(h2);
+  document.body.appendChild(img);
+  document.body.appendChild(p);
+  document.body.appendChild(modal);
+
+
+
+  // ... (rest of the JavaScript code for modal functionality remains the same) ...
+
+    // Get the modal
+  var modal = document.getElementById("imagedescription");
+
+  // Get the button that opens the modal
+  var btn = document.getElementById("openModal");
+
+  // Get the <span> element that closes the modal - CORRECTED
+  var span = document.getElementById("closeButton");  // Get by ID
+
+  // When the user clicks the button, open the modal
+  btn.onclick = function() {
+    modal.style.display = "block";
+  }
+
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
                             <h4>Logo Image</h4>
                             <img src="logo.png" alt="Company logo" style="width: 20%; height: auto; display: block; margin-bottom: 10px;">
                             <h4>Icon used without visible label</h4>
